# curriculos

./: .firebaserc  .gitignore  AI_RULES.md  ARCHITECTURE.md  PLAN.md  PRD.md  README.md
backend/: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 388c518b7f5a_add_email_to_fixed_companies.py  58c25df1e1ce_create_all_tables.py  d1e2f3a4b5c6_create_application_clicks.py  e2f3a4b5c6d7_add_is_favorite_to_jobs.py  f1a2b3c4d5e6_create_rejected_jobs.py  g2b3c4d5e6f7_add_auto_delete_days.py
backend/app/: README.md  main.py
backend/app/api/routes/: applications.py  companies.py  jobs.py  profile.py  (+1 more)
backend/app/core/: config.py  database.py  schema.py  seed.py
backend/app/models/: __init__.py  application.py  application_click.py  company.py  job.py  profile.py  rejected_job.py
backend/app/services/: README.md  ai_matcher.py  auto_delete_service.py  classifier.py  enrichment_service.py  geocoding.py  imap_service.py  match_analyser.py  matcher.py  notification_service.py  recurring_service.py  scan_service.py  scan_state.py  scheduler_service.py
backend/app/utils/: pdf_handler.py
backend/scripts/: train_relevance_nn.py
backend/tests/: README.md  conftest.py  test_ai_matcher.py  test_api_applications.py  test_api_companies.py  test_api_jobs.py  test_api_profile.py  test_api_scheduler.py  test_auto_delete.py  test_classifier_and_analyser.py  test_config.py  test_matcher.py  test_models.py  test_rejected_jobs.py  test_scheduler_guards.py  test_scrapers.py
(+217 files in other folders)
